2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* xdisp.c (adjust_window_ends): Move duplicated code to new function.
	(try_window, try_window_reusing_current_matrix, try_window_id): Use it.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Convert window_end_pos and
	window_end_vpos from Lisp_Object to ptrdiff_t and int, respectively.
	(wset_window_end_pos, wset_window_end_vpos): Remove.
	* dispnew.c (adjust_glyph_matrix):
	* window.c (Fwindow_end, replace_window, set_window_buffer)
	(make_window):
	* xdisp.c (check_window_end, move_it_to, redisplay_internal)
	(set_vertical_scroll_bar, redisplay_window, try_window)
	(try_window_reusing_current_matrix, find_first_unchanged_at_end_row)
	(try_window_id, decode_mode_spec, mouse_face_from_buffer_pos)
	(note_mouse_highlight): Adjust users.
	(try_cursor_movement): Likewise.  Convert old precondition to eassert.
	Add comment.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix --enable-gcc-warnings errors introduced in 2013-08-13 commit.
	* image.c (imagemagick_filename_hint): Use `const char *' and
	prefer SSDATA to SDATA to avoid warnings.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	Cleanup window fringes, margins and scroll bars adjustments.
	* window.c (set_window_fringes, set_window_margins)
	(set_window_scroll_bars, apply_window_adjustment): New functions.
	(set_window_buffer, Fset_window_margins, Fset_window_fringes)
	(Fset_window_scroll_bars): Use them.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Convert scroll_bar_width
	from Lisp_Object to integer.  Adjust comment.
	(WINDOW_CONFIG_SCROLL_BAR_WIDTH, WINDOW_CONFIG_SCROLL_BAR_COLS):
	Adjust users.
	* window.c (wset_scroll_bar_width): Remove.
	(make_window): Initialize scroll_bar_width.
	(Fsplit_window_internal): Use direct assignment.
	(Fset_window_configuration, save_window_save):
	Convert Lisp_Object to integer and back where appropriate.